fix(extração-dados): Ajuste nos dados extraidos