@@ -5,6 +5,7 @@ import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 import java.util.regex.Matcher;
@@ -14,11 +15,13 @@ import java.util.stream.Stream;
 
 public class DateUtils {
 
-    // Regex para encontrar o padrão de lista de datas: "dd, dd, dd e dd/mm"
-    private static final Pattern DATES_LIST_PATTERN = Pattern.compile("(.+?)\\s*(\\d{1,2}/\\d{4}|\\d{1,2}/\\d{2})$");
+    // Regex para encontrar listas de datas com conectores "e", "E", "a" ou "A"
+    private static final Pattern DATES_LIST_PATTERN = Pattern.compile("(.+?)\\s*(e|E|a|A)\\s*(\\d{1,2}\\/\\d{4}|\\d{1,2}\\/\\d{2})$");
+
+    private static final Pattern RANGE_PATTERN = Pattern.compile("(\\d{1,2})\\s*(?:a|A|e|E|\\s)?\\s*(\\d{1,2})\\s*(\\d{1,2}\\/\\d{4}|\\d{1,2}\\/\\d{2})$");
 
     // Formatadores para parsing de data
-    private static final List<DateTimeFormatter> DATE_FORMATTERS = List.of(
+    private static final List<DateTimeFormatter> DATE_FORMATTERS = Arrays.asList(
         DateTimeFormatter.ofPattern("dd/MM/yyyy"),
         DateTimeFormatter.ofPattern("dd-MM-yyyy"),
         DateTimeFormatter.ofPattern("dd.MM.yyyy"),
@@ -29,106 +32,129 @@ public class DateUtils {
     );
 
     // Formatador para datas com nomes de meses em português
-    private static final DateTimeFormatter TEXT_DATE_FORMATTER = DateTimeFormatter.ofPattern("dd 'de' MMMM 'de' yyyy", new Locale("pt", "BR"));
-
+    private static final DateTimeFormatter TEXT_DATE_FORMATTER = DateTimeFormatter.ofPattern("dd 'de' MMMM 'de' yyyy", Locale.forLanguageTag("pt-BR"));
+    
     /**
      * Função principal para analisar datas a partir de strings extraídas de documentos.
-     * Ela lida com datas saltadas, intervalos de datas e datas únicas.
-     * * @param dateStr A string de data de início (pode conter uma lista de datas).
-     * @param endDateStr A string de data de finalização (opcional).
+     * @param dateStr A string de data de início (pode conter uma lista de datas ou uma única data).
      * @return Uma lista de LocalDate.
      */
-    public static List<LocalDate> parseDates(String dateStr, String endDateStr) {
-        if (dateStr == null || dateStr.trim().isEmpty()) {
+    public static List<LocalDate> parseDates(String dateStr) {
+        if (dateStr == null || dateStr.trim().isEmpty() || dateStr.trim().equals("-")) {
             return new ArrayList<>();
         }
 
-        String cleanedInput = dateStr.trim();
+        String cleanedInput = dateStr.trim().replaceAll("\\(.+\\)", "");
 
-        // 1. Tentar parsear como uma lista de datas saltadas
-        if (cleanedInput.contains(",")) {
-            List<LocalDate> parsedDates = parseDateList(cleanedInput);
-            if (!parsedDates.isEmpty()) {
-                return parsedDates;
+        Matcher rangeMatcher = RANGE_PATTERN.matcher(cleanedInput);
+        if (rangeMatcher.find()) {
+            try {
+                LocalDate startDate = parseSingleDate(rangeMatcher.group(1).trim() + "/" + rangeMatcher.group(3).trim());
+                LocalDate endDate = parseSingleDate(rangeMatcher.group(2).trim() + "/" + rangeMatcher.group(3).trim());
+                return createDateRange(startDate, endDate);
+            } catch (Exception e) {
+                System.err.println("Erro ao analisar o intervalo de datas: " + cleanedInput);
+                return new ArrayList<>();
             }
         }
         
-        // 2. Tentar parsear como um intervalo de datas
-        if (endDateStr != null && !endDateStr.trim().isEmpty()) {
-            LocalDate startDate = parseSingleDate(cleanedInput);
-            LocalDate endDate = parseSingleDate(endDateStr.trim());
-            if (startDate != null && endDate != null) {
-                return createDateRange(startDate, endDate);
+        Matcher listMatcher = DATES_LIST_PATTERN.matcher(cleanedInput);
+        if (listMatcher.find()) {
+            try {
+                String dayPart = listMatcher.group(1).trim();
+                String connector = listMatcher.group(2).trim().toLowerCase(); 
+                String monthAndYear = listMatcher.group(3).trim();
+
+                if ("e".equals(connector)) {
+                    String[] days = dayPart.split("[,\\s]+");
+                    List<LocalDate> dates = new ArrayList<>();
+                    for (String day : days) {
+                        if (!day.trim().isEmpty()) {
+                            LocalDate date = parseSingleDate(day.trim() + "/" + monthAndYear);
+                            if (date != null) {
+                                dates.add(date);
+                            }
+                        }
+                    }
+                    return dates;
+                }
+            } catch (Exception e) {
+                System.err.println("Erro ao analisar a lista de datas: " + cleanedInput);
+                return new ArrayList<>();
             }
         }
 
-        // 3. Tentar parsear como um formato de texto (ex: "10 de outubro de 2025")
+        // 2. Tentar parsear como um formato de texto (ex: "10 de outubro de 2025")
         try {
             LocalDate textDate = LocalDate.parse(cleanedInput, TEXT_DATE_FORMATTER);
-            return List.of(textDate);
+            return new ArrayList<>(List.of(textDate));
         } catch (DateTimeParseException e) {
             // Se falhar, tenta o próximo padrão
         }
         
-        // 4. Tentar parsear como uma única data em formatos comuns (ex: "10/10/2025", "10/10")
+        // Se não for uma lista, tentar parsear como uma única data
         LocalDate singleDate = parseSingleDate(cleanedInput);
         if (singleDate != null) {
-            return List.of(singleDate);
+            return new ArrayList<>(List.of(singleDate));
         }
 
         System.err.println("Nenhum padrão de data reconhecido para: " + dateStr);
         return new ArrayList<>();
     }
-
+    
     // --- Funções Auxiliares ---
     
-    // Função para analisar uma única data em múltiplos formatos
     public static LocalDate parseSingleDate(String dateStr) {
-        String processedDateStr = dateStr;
-        if (dateStr.matches("\\d{1,2}[/-]\\d{1,2}")) {
-            processedDateStr = String.format("%s/%d", dateStr, LocalDate.now().getYear());
-        }
         for (DateTimeFormatter formatter : DATE_FORMATTERS) {
             try {
-                return LocalDate.parse(processedDateStr, formatter);
+                return LocalDate.parse(dateStr, formatter);
             } catch (DateTimeParseException e) {
-                // Tentar o próximo
+                System.err.println("Erro ao analisar a data: " + dateStr);
+                return null;
             }
         }
         return null;
     }
-
-    // Função para analisar strings com listas de datas
-    private static List<LocalDate> parseDateList(String input) {
-        List<LocalDate> dates = new ArrayList<>();
-        Matcher matcher = DATES_LIST_PATTERN.matcher(input.replace("e", ""));
+    
+    // private static List<LocalDate> parseDateList(String input) {
+    //     List<LocalDate> dates = new ArrayList<>();
+    //     Matcher matcher = DATES_LIST_PATTERN.matcher(input);
         
-        if (matcher.find()) {
-            try {
-                String dayPart = matcher.group(1).trim();
-                String monthAndYear = matcher.group(2).trim();
-                
-                String[] days = dayPart.split("[,\\s]+");
-                
-                for (String day : days) {
-                    if (!day.trim().isEmpty()) {
-                        String fullDateStr = String.format("%s/%s", day.trim(), monthAndYear);
-                        LocalDate date = parseSingleDate(fullDateStr);
-                        if (date != null) {
-                            dates.add(date);
-                        }
-                    }
-                }
-            } catch (Exception e) {
-                System.err.println("Erro ao analisar a lista de datas: " + input);
-                return new ArrayList<>();
-            }
-        }
-        return dates;
-    }
+    //     if (matcher.find()) {
+    //         try {
+    //             String dayPart = matcher.group(1).trim();
+    //             String connector = matcher.group(2).trim().toLowerCase();
+    //             String monthAndYear = matcher.group(3).trim();
 
-    // Função para gerar um intervalo de datas (Útil para o seu caso de datas de início e fim)
-    public static List<LocalDate> createDateRange(LocalDate startDate, LocalDate endDate) {
+    //             if ("a".equals(connector)) {
+    //                 String[] dayRange = dayPart.split("(?i)\\s*a\\s*");
+    //                 if (dayRange.length == 2) {
+    //                     LocalDate startDate = parseSingleDate(dayRange[0].trim() + "/" + monthAndYear);
+    //                     LocalDate endDate = parseSingleDate(dayRange[1].trim() + "/" + monthAndYear);
+    //                     return createDateRange(startDate, endDate);
+    //                 }
+    //             } else if ("e".equals(connector)) {
+    //                 String[] days = dayPart.split("[,\\s]+");
+                    
+    //                 for (String day : days) {
+    //                     if (!day.trim().isEmpty()) {
+    //                         LocalDate date = parseSingleDate(day.trim() + "/" + monthAndYear);
+    //                         if (date != null) {
+    //                             dates.add(date);
+    //                         }
+    //                     }
+    //                 }
+    //                 return dates;
+    //             }
+    //         } catch (Exception e) {
+    //             System.err.println("Erro ao analisar a lista de datas: " + input);
+    //             return new ArrayList<>();
+    //         }
+    //     }
+    //     return dates;
+    // }
+
+    private static List<LocalDate> createDateRange(LocalDate startDate, LocalDate endDate) {
         if (startDate == null || endDate == null || startDate.isAfter(endDate)) {
             return new ArrayList<>();
         }
